@@ -4,6 +4,8 @@ $Id$
 	Outgoing messages now go through the config for formatting
 	Zaway now makes an outgoing message, instead of an admin message
 	The 'zlocate' command can now handle multiple users
+	The simple user format for "To:" is in effect again
+	Prettyed up the zwrite line for using 'reply' on a zaway
 	
 1.2.6
 	Started adding code for newmsgproc.  It doesn't fully work yet!
